scripts/tests/errors/err_struct_no_name.bu
// BAD: struct with no name
struct {
    x, y
}
print("should not reach here");
